# SeaBattle

./: .gitignore  CMakeLists.txt  README.md  SeaBattle.sln  SeaBattle.vcxproj  SeaBattle.vcxproj.filters  board.hpp  button.hpp  game.hpp  main.cpp  menu.hpp  player.hpp  rules.hpp
include/: board.hpp  button.hpp  game.hpp  player.hpp  rules.hpp
src/: main.cpp
